hw/auth-service/deploy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: auth-service
  name: auth-service
  labels:
    app: otus-hw
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: web-service
          image: khmel19/otus:hw1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
            - name: actuator
              containerPort: 8082
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: actuator
            initialDelaySeconds: 140
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: actuator
            initialDelaySeconds: 140
            periodSeconds: 10
