hw/auth-service/deploy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: auth-service
  name: auth-svc
  labels:
    app: auth-svc
spec:
  selector:
    app: auth-service
  ports:
    - port: 8000
      name: http
      targetPort: http
    - port: 8082
      name: actuator
      targetPort: actuator
